Fix predeploy script syntax for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "`predeploy`": "npm run build && cp build/index.html build/404.html",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build --remote mindfulme-app",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "delete": "ssh pi@192.168.1.201 'sudo rm -r /var/www/html/* && sudo mkdir -p /var/www/html/static/ && sudo chmod -R 777 /var/www/html '",
